--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "pretest": "npm run build",
     "test": "jest",
     "build": "tsup",
-    "prelog": "npm run build",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "postinstall": "npm run build"
   },
   "keywords": [
     "log",
