--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "pretest": "npm run build",
     "test": "jest",
     "build": "tsup",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "publish": "npm publish"
   },
   "keywords": [
     "log",
