--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "build": "tsup",
     "prepublishOnly": "npm run build",
-    "publish": "npm publish"
+    "publish": "npm publish",
+    "start": "ts-node test.ts"
   },
   "keywords": [
     "log",
