--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "build": "tsup",
     "prepublishOnly": "npm run build",
     "publish": "npm publish",
+
+    "prestart": "npm run build",
     "start": "ts-node test.ts"
   },
   "keywords": [
@@ -35,6 +37,7 @@
   "dependencies": {
     "@swc/core": "^1.6.6",
     "colors": "^1.4.0",
+    "promised-sqlite3": "^2.1.0",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
