--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "persisted-logs",
-  "version": "2.2.20240831",
+  "version": "2.3.20240901",
   "description": "(BetterLogs) An always persisted logging library.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -22,7 +22,10 @@
     "no-network",
     "nonnetwork",
     "networkless",
-    "serverless"
+    "serverless",
+    "sql",
+    "sqlite",
+    "sqlite3"
   ],
   "repository": {
     "type": "git",
