--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "persisted-logs",
-  "version": "2.6.20240904",
+  "version": "2.6.20240905",
   "description": "(BetterLogs) An always persisted logging library.",
-  "main": "dist/app",
-  "types": "dist/app.d",
+  "main": "dist/app.js",
+  "types": "dist/app.d.ts",
   "scripts": {
     "prettier": "prettier --write src/**/*.ts",
     "pretest": "npm run build",
