--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "test": "jest",
     "build": "tsup",
     "build:prod":"NODE_ENV=production tsup",
-    "_publish": "npm publish",
-    "start": "ts-node test.ts"
+    "_publish": "NODE_ENV=production npm publish",
+    "start:_": "ts-node src/test.ts",
+    "start": "node dist/test.js"
   },
   "keywords": [
     "log",
@@ -37,7 +38,9 @@
   "dependencies": {
     "@swc/core": "^1.6.6",
     "promised-sqlite3": "^2.1.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "bluebird": "^3.7.2",
+    "colors": "^1.4.0"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
