--- a/package.json
+++ b/package.json
@@ -1,56 +1,61 @@
 {
-  "name": "persisted-logs",
-  "version": "2.11.20240912",
-  "description": "(BetterLogs) An always persisted logging library.",
-  "main": "dist/app.js",
-  "types": "dist/app.d.ts",
-  
-  "scripts": {
-    "prettier": "prettier --write src/**/*.ts",
-    "test": "jest",
-    "build": "NODE_ENV=development tsup",
-    "build:prod":"NODE_ENV=production tsup",
-    "_publish": "NODE_ENV=production npm publish",
-    "start:_": "ts-node src/test.ts",
-    "start": "node dist/test.js"
-  },
-  "keywords": [
-    "log",
-    "logging",
-    "persistance",
-    "search",
-    "no-network",
-    "nonnetwork",
-    "networkless",
-    "serverless",
-    "sql",
-    "sqlite",
-    "sqlite3"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TheOpenSourceU/persisted-logs.git"
-  },
-  "author": {
-    "name": "Frank Villasenor <frank@theOpenSourceU.org>",
-    "url": "https://www.theOpenSourceU.org/"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "@swc/core": "^1.6.6",
-    "promised-sqlite3": "^2.1.0",
-    "sqlite3": "^5.1.7",
-    "bluebird": "^3.7.2",
-    "colors": "^1.4.0"
-  },
-  "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.24",
-    "jest": "latest",
-    "prettier": "latest",
-    "ts-jest": "latest",
-    "ts-node": "^10.9.2",
-    "tsup": "^8.0.2",
-    "typescript": "latest"
-  }
+   "name": "persisted-logs",
+   "version": "2.11.20241128",
+   "description": "(BetterLogs) An always persisted logging library.",
+   "main": "dist/app.js",
+   "types": "dist/app.d.ts",
+   "scripts": {
+      "prettier": "prettier --write src/**/*.ts",
+      "test": "jest",
+      "build": "NODE_ENV=development tsup",
+      "build:prod": "NODE_ENV=production tsup",
+      "_publish": "NODE_ENV=production npm publish",
+      "start:_": "ts-node src/test.ts",
+      "start": "ts-node src/index.ts",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "keywords": [
+      "log",
+      "logging",
+      "persistance",
+      "search",
+      "no-network",
+      "nonnetwork",
+      "networkless",
+      "serverless",
+      "sql",
+      "sqlite",
+      "sqlite3",
+      "mysql",
+      "mysql2"
+   ],
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/TheOpenSourceU/persisted-logs.git"
+   },
+   "author": {
+      "name": "Frank Villasenor <frank@theOpenSourceU.org>",
+      "url": "https://www.theOpenSourceU.org/"
+   },
+   "license": "MIT",
+   "dependencies": {
+      "@swc/core": "^1.6.6",
+      "bluebird": "^3.7.2",
+      "colors": "^1.4.0",
+      "mysql2": "^3.11.5",
+      "promised-sqlite3": "^2.1.0",
+      "reflect-metadata": "^0.1.13",
+      "sqlite3": "^5.1.7",
+      "typeorm": "0.3.20"
+   },
+   "devDependencies": {
+      "@types/jest": "^29.5.12",
+      "@types/node": "^20.11.24",
+      "jest": "latest",
+      "prettier": "latest",
+      "ts-jest": "latest",
+      "ts-node": "latest",
+      "tsup": "latest",
+      "typescript": "latest"
+   }
 }
