--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ node_modules/
 build/
 tmp/
 temp/
+/dist/app.d.mts
+/dist/app.d.ts
+/dist/app.js
+/dist/app.mjs
+/dist/test.d.mts
+/dist/test.d.ts
+/dist/test.js
+/dist/test.mjs
