--- a/package.json
+++ b/package.json
@@ -42,11 +42,12 @@
       "@swc/core": "^1.6.6",
       "bluebird": "^3.7.2",
       "colors": "^1.4.0",
+      "dotenv": "^16.4.5",
       "mysql2": "^3.11.5",
       "promised-sqlite3": "^2.1.0",
       "reflect-metadata": "^0.1.13",
       "sqlite3": "^5.1.7",
-      "typeorm": "0.3.20"
+      "typeorm": "^0.3.20"
    },
    "devDependencies": {
       "@types/jest": "^29.5.12",
