--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "persisted-logs",
-   "version": "2.11.20241128",
+   "version": "3.0.0-alpha.20241202",
    "description": "(BetterLogs) An always persisted logging library.",
    "main": "dist/app.js",
    "types": "dist/app.d.ts",
