--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
    "main": "dist/app.js",
    "types": "dist/app.d.ts",
    "scripts": {
-      "prettier": "prettier --write src/**/*.ts",
+      "prettier": "prettier --write src/**",
       "test": "jest",
-      "build": "NODE_ENV=development tsup",
-      "build:prod": "NODE_ENV=production tsup",
-      "_publish": "NODE_ENV=production npm publish",
+      "build": "tsup",
+      "prepublish": "NODE_ENV=production npm run build",
+      "publish": "NODE_ENV=production npm publish --dry-run",
       "start:_": "ts-node src/test.ts",
       "start": "ts-node src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs"
@@ -38,6 +38,13 @@
       "url": "https://www.theOpenSourceU.org/"
    },
    "license": "MIT",
+   "files": [
+      "dist",
+      "package.json",
+      "package-lock.json",
+      "Readme.md",
+      "LICENSE"
+   ],
    "dependencies": {
       "@swc/core": "^1.6.6",
       "bluebird": "^3.7.2",
