--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "persisted-logs",
-   "version": "3.0.4-alpha.20241202",
+   "version": "3.0.5-alpha.20241203",
    "description": "(BetterLogs) An always persisted logging library.",
    "main": "dist/app.js",
    "types": "dist/app.d.ts",
@@ -9,7 +9,6 @@
       "test": "jest",
       "build": "tsup",
       "prepublish": "NODE_ENV=production npm run build",
-      "start:_": "ts-node src/test.ts",
       "start": "ts-node src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs"
    },
@@ -46,13 +45,13 @@
    ],
    "dependencies": {
       "@swc/core": "^1.6.6",
+      "autobind-decorator": "^2.4.0",
       "bluebird": "^3.7.2",
       "colors": "^1.4.0",
       "dotenv": "^16.4.5",
       "mysql2": "^3.11.5",
       "promised-sqlite3": "^2.1.0",
       "reflect-metadata": "^0.1.13",
-      "sqlite3": "^5.1.7",
       "typeorm": "^0.3.20"
    },
    "devDependencies": {
